<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_stabilization">

    <fragment
        android:id="@+id/nav_stabilization"
        android:name="com.ismip12.pscf.planemonitor.ui.stabilization.StabilizationFragment"
        android:label="@string/menu_stabilization"
        tools:layout="@layout/fragment_stabilization" />

    <fragment
        android:id="@+id/nav_engines"
        android:name="com.ismip12.pscf.planemonitor.ui.engines.EnginesFragment"
        android:label="@string/menu_engines"
        tools:layout="@layout/fragment_engines" />

    <fragment
        android:id="@+id/nav_components"
        android:name="com.ismip12.pscf.planemonitor.ui.components.ComponentsFragment"
        android:label="@string/menu_components"
        tools:layout="@layout/fragment_components" />

    <fragment
        android:id="@+id/nav_taws"
        android:name="com.ismip12.pscf.planemonitor.ui.taws.TawsFragment"
        android:label="@string/menu_taws"
        tools:layout="@layout/fragment_taws" />

    <fragment
        android:id="@+id/nav_comfort"
        android:name="com.ismip12.pscf.planemonitor.ui.comfort.ComfortFragment"
        android:label="@string/menu_comfort"
        tools:layout="@layout/fragment_comfort" />
</navigation>